--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <div>First Commit</div>
     <h3>Second Commit</h3>
-    <p>Third Commit</p>
+    <p>Third Commit in test branch</p>
 </body>
 </html>
